--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,13 +30,13 @@ select:disabled {
 
 button,
 .button {
-  @apply flex justify-center w-full text-gray-700 font-semibold hover:bg-red-600 transition duration-300;
+  @apply flex justify-center w-full text-gray-700 font-semibold;
   @apply border border-gray-300 rounded-xl px-6 py-2;
 }
 
 button[type='submit'],
 .sumbit {
-  @apply border-red-500 bg-red-500 hover:bg-red-600 text-white transition duration-300;
+  @apply border-red-500 bg-red-500  text-white transition;
 }
 button[type='submit']:disabled,
 .sumbit:disabled {
